fix NPE